// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collect events 1`] = `
Array [
  Array [
    Object {
      "value": Array [],
    },
  ],
]
`;

exports[`load a file 1`] = `
Array [
  Array [
    Object {
      "url": "http://localhost:3000/test/fixtures/fast",
    },
  ],
]
`;

exports[`trace a file 1`] = `
Array [
  Array [
    Object {
      "bufferUsage": 0.01,
      "collectedEvents": 0,
    },
  ],
  Array [
    Object {
      "bufferUsage": 0.01,
      "collectedEvents": 0,
    },
  ],
]
`;
